--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -266,7 +266,7 @@
 			@include icon-position( 44px );
 
 			svg {
-				@include icon-position( 14px );
+				@include icon-position( 18px );
 			}
 
 			// &:not(.expanded) {
